commit tipPerPerson + totalPerPerson

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
         <div class="select_tip">
           Select Tip %
-          <button><span id="percent">5</span>%</button>
-          <button><span id="percent">10</span>%</button>
+          <button><span id="percent_five">5</span>%</button>
+          <button><span id="percent_ten">10</span>%</button>
           <button><span id="percent_fifteen">15</span>%</button>
           <button><span id="percent_twentyFive">25</span>%</button>
           <button><span id="percent_fifty">50</span>%</button>
@@ -68,9 +68,9 @@
           Tip Amount / person <span id="tip_amount" step="0.01">0.00</span>
         </div>
         <div class="total">
-          Total / person <span id="total_amount">0.00</span>
+          Total / person <span id="total_person">0.00</span>
         </div>
-        <div class="reset"><button type="reset">Reset</button></div>
+        <div class="reset"><button id="reset">Reset</button></div>
       </div>
     </div>
 
