commit tip custom + reset

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <button><span id="percent_fifteen">15</span>%</button>
           <button><span id="percent_twentyFive">25</span>%</button>
           <button><span id="percent_fifty">50</span>%</button>
-          <button>Custom</button>
+          <input id="custom" type="button" value="Custom" />
         </div>
         <div class="nb_people">
           <label for="nb_people">Number of People</label>
