commit correcting event firing + style

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <div class="select_tip">
           Select Tip %
-          <button><span id="percent_five">5</span>%</button>
-          <button><span id="percent_ten">10</span>%</button>
-          <button><span id="percent_fifteen">15</span>%</button>
-          <button><span id="percent_twentyFive">25</span>%</button>
-          <button><span id="percent_fifty">50</span>%</button>
+          <input id="percent_five" type="button" value="5%" />
+          <input id="percent_ten" type="button" value="10%" />
+          <input id="percent_fifteen" type="button" value="15%" />
+          <input id="percent_twentyFive" type="button" value="25%" />
+          <input id="percent_fifty" type="button" value="50%" />
           <input id="custom" type="button" value="Custom" />
         </div>
 
