--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <link rel="stylesheet" href="style.css" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-
     <script defer src="script.js"></script>
-
     <title>Tip calculator app</title>
   </head>
   <body>
@@ -42,13 +37,17 @@
         </div>
 
         <div class="select_tip">
-          Select Tip %
-          <input id="percent_five" type="button" value="5%" />
-          <input id="percent_ten" type="button" value="10%" />
-          <input id="percent_fifteen" type="button" value="15%" />
-          <input id="percent_twentyFive" type="button" value="25%" />
-          <input id="percent_fifty" type="button" value="50%" />
-          <input id="custom" type="button" value="Custom" />
+          <p>Select Tip %</p>
+          <div class="first_raw">
+            <input id="percent_five" type="button" value="5%" />
+            <input id="percent_ten" type="button" value="10%" />
+            <input id="percent_fifteen" type="button" value="15%" />
+          </div>
+          <div class="second_raw">
+            <input id="percent_twentyFive" type="button" value="25%" />
+            <input id="percent_fifty" type="button" value="50%" />
+            <input id="custom" type="button" value="Custom" />
+          </div>
         </div>
 
         <div class="nb_people">
@@ -85,7 +84,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/JB-Doffemont">JB Doffémont</a>.
       </div>
     </div>
   </body>
