commit media queries

--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
 
         <div class="select_tip">
           <p>Select Tip %</p>
-          <div class="first_raw">
+          <div class="select">
             <input id="percent_five" type="button" value="5%" />
             <input id="percent_ten" type="button" value="10%" />
             <input id="percent_fifteen" type="button" value="15%" />
-          </div>
-          <div class="second_raw">
+
             <input id="percent_twentyFive" type="button" value="25%" />
             <input id="percent_fifty" type="button" value="50%" />
             <input id="custom" type="button" value="Custom" />
