--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             />
           </svg>
           <span style="display: none" id="error_message">Can't be zero</span>
-          <input type="number" id="nb_people" value="0" step="1" min="0" />
+          <input type="number" id="nb_people" value="0" min="1" />
         </div>
       </div>
 
