commit correcting reset

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             <div>Tip Amount</div>
             <div><p>/ person</p></div>
           </div>
-          <span id="tip_amount" step="0.01">$0.00</span>
+          <span id="tip_amount">$0.00</span>
         </div>
         <div class="total">
           <div class="text">
             <div>Total</div>
             <p>/ person</p>
           </div>
-          <span id="total_person" step="0.01">$0.00</span>
+          <span id="total_person">$0.00</span>
         </div>
         <div class="reset"><button id="reset">RESET</button></div>
       </div>
