commit organisation folder

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="../tip-calculator-app-main/assets/style/style.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <script defer src="script.js"></script>
+    <script defer src="../tip-calculator-app-main/assets/js/script.js"></script>
     <title>Tip calculator app</title>
   </head>
   <body>
