--- a/index.html
+++ b/index.html
@@ -36,13 +36,28 @@
         <div class="select_tip">
           <p>Select Tip %</p>
           <div class="select">
-            <input id="percent_five" type="button" value="5%" />
-            <input id="percent_ten" type="button" value="10%" />
-            <input id="percent_fifteen" type="button" value="15%" />
+            <input id="percent_five" class="percent" type="button" value="5%" />
+            <input id="percent_ten" class="percent" type="button" value="10%" />
+            <input
+              id="percent_fifteen"
+              class="percent"
+              type="button"
+              value="15%"
+            />
 
-            <input id="percent_twentyFive" type="button" value="25%" />
-            <input id="percent_fifty" type="button" value="50%" />
-            <input id="custom" type="button" value="Custom" />
+            <input
+              id="percent_twentyFive"
+              class="percent"
+              type="button"
+              value="25%"
+            />
+            <input
+              id="percent_fifty"
+              class="percent"
+              type="button"
+              value="50%"
+            />
+            <input id="custom" class="percent" type="button" value="Custom" />
           </div>
         </div>
 
