--- a/index.html
+++ b/index.html
@@ -22,77 +22,88 @@
     <title>Tip calculator app</title>
   </head>
   <body>
-    <div id="title_container">
-      <p class="title">SPLITTER</p>
-    </div>
+    <div id="main">
+      <img src="./assets/images/logo.svg" alt="" />
 
-    <div id="splitter_container">
-      <div class="left_card">
-        <div class="bill">
-          <label for="bill">Bill</label>
-          <input type="number" id="bill_input" min="0" value="0" />
-        </div>
+      <div id="splitter_container">
+        <div class="left_card">
+          <div class="bill">
+            <label for="bill">Bill</label>
+            <input type="number" id="bill_input" min="0" value="0" />
+          </div>
 
-        <div class="select_tip">
-          <p>Select Tip %</p>
-          <div class="select">
-            <input id="percent_five" class="percent" type="button" value="5%" />
-            <input id="percent_ten" class="percent" type="button" value="10%" />
-            <input
-              id="percent_fifteen"
-              class="percent"
-              type="button"
-              value="15%"
-            />
+          <div class="select_tip">
+            <p>Select Tip %</p>
+            <div class="select">
+              <input
+                id="percent_five"
+                class="percent"
+                type="button"
+                value="5%"
+              />
+              <input
+                id="percent_ten"
+                class="percent"
+                type="button"
+                value="10%"
+              />
+              <input
+                id="percent_fifteen"
+                class="percent"
+                type="button"
+                value="15%"
+              />
 
-            <input
-              id="percent_twentyFive"
-              class="percent"
-              type="button"
-              value="25%"
-            />
-            <input
-              id="percent_fifty"
-              class="percent"
-              type="button"
-              value="50%"
-            />
-            <input id="custom" class="percent" type="button" value="Custom" />
+              <input
+                id="percent_twentyFive"
+                class="percent"
+                type="button"
+                value="25%"
+              />
+              <input
+                id="percent_fifty"
+                class="percent"
+                type="button"
+                value="50%"
+              />
+              <input id="custom" class="percent" type="button" value="Custom" />
+            </div>
+          </div>
+
+          <div class="nb_people">
+            <label for="nb_people">Number of People</label>
+            <span style="display: none" id="error_message">Can't be zero</span>
+            <input type="number" id="nb_people" value="0" min="1" />
           </div>
         </div>
 
-        <div class="nb_people">
-          <label for="nb_people">Number of People</label>
-          <span style="display: none" id="error_message">Can't be zero</span>
-          <input type="number" id="nb_people" value="0" min="1" />
+        <div class="right_card">
+          <div class="tip">
+            <div class="text">
+              <div>Tip Amount</div>
+              <div><p>/ person</p></div>
+            </div>
+            <span id="tip_amount">$0.00</span>
+          </div>
+          <div class="total">
+            <div class="text">
+              <div>Total</div>
+              <p>/ person</p>
+            </div>
+            <span id="total_person">$0.00</span>
+          </div>
+          <div class="reset"><button id="reset">RESET</button></div>
         </div>
       </div>
 
-      <div class="right_card">
-        <div class="tip">
-          <div class="text">
-            <div>Tip Amount</div>
-            <div><p>/ person</p></div>
-          </div>
-          <span id="tip_amount">$0.00</span>
+      <div id="footer">
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://github.com/JB-Doffemont">JB Doffémont</a>.
         </div>
-        <div class="total">
-          <div class="text">
-            <div>Total</div>
-            <p>/ person</p>
-          </div>
-          <span id="total_person">$0.00</span>
-        </div>
-        <div class="reset"><button id="reset">RESET</button></div>
-      </div>
-    </div>
-
-    <div id="footer">
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/JB-Doffemont">JB Doffémont</a>.
       </div>
     </div>
   </body>
