--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
 
       <div id="footer">
         <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by
+          <p>Coded by</p>
           <a href="https://github.com/JB-Doffemont">JB Doffémont</a>.
         </div>
       </div>
