--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link
-      rel="stylesheet"
-      href="../Tip_calculator_app/assets/style/style.css"
-    />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <script defer src="../Tip_calculator_app/assets/js/script.js"></script>
+    <script defer src="assets/js/script.js"></script>
     <title>Tip calculator app</title>
   </head>
   <body>
